--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
-	<head>UA-117992624-1
+	<head><!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-117992624-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-117992624-1');
+</script>
 		<title>Anthony Sevilla Moreno</title>
 		<h1 style="text-align:center"><strong>Anthony Sevilla Moreno</strong></h1>
 	</head>
