--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-	<head><!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<head>
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117992624-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
